cmake_minimum_required(VERSION 3.20)

project(icp1_s19)

add_subdirectory(00_init_win)
add_subdirectory(01_common_init)
add_subdirectory(02_time_server)
add_subdirectory(03_tcp_server)
add_subdirectory(04_tcp_client)
add_subdirectory(05_udp_server)
add_subdirectory(06_udp_client)
add_subdirectory(07_tcp_server_fork)
add_subdirectory(08_tcp_server_thread)
add_subdirectory(09_tcp_server_select)